// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PdpCardsSection renders the image component when a featuredImage is defined (PageInfo Data) 1`] = `
<body>
  <div>
    <div
      class="PdpCardsSection Section-root Section-alabaster css-10chrh8"
      data-testid="pdp-cards-section"
    >
      <div
        class=" css-ze8cyt"
      >
        <div
          class="MuiContainer-root MuiContainer-maxWidthXl css-15p7r21-MuiContainer-root"
        >
          <h2
            class="MuiTypography-root MuiTypography-h2 Typography-underline css-1gn4sxn-MuiTypography-root"
            data-testid="typography"
          >
            example-pdp-cards-title
          </h2>
          <div
            class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-row MuiGrid2-spacing-xs-3  css-1qxu916-MuiGrid2-root"
            data-testid="grid-container"
          >
            <div
              class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 MuiGrid2-grid-sm-6 MuiGrid2-grid-md-4 MuiGrid2-grid-lg-4 Grid-item css-j0lfek-MuiGrid2-root"
              data-testid="grid-item"
            >
              <div
                class="ColorPair-white css-mdwtx6"
                data-testid="tappable-card-box"
              >
                <a
                  class="MuiButtonBase-root MuiButton-root Button-root MuiButton-text Button-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-root Button-root MuiButton-text Button-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium TappableCard-cardButton css-82jeic-MuiButtonBase-root-MuiButton-root"
                  data-gtm="{"id":"cta-click1","action":"/en/linked/page/path/","label":"Link label"}"
                  data-testid="tappable-card-main"
                  href="/en/linked/page/path/"
                  tabindex="0"
                >
                  <div
                    class="gatsby-image-wrapper gatsby-image-wrapper-constrained TappableCard-headerPicture css-11fi03y-Media"
                    data-gatsby-image-wrapper=""
                    style="position: relative; overflow: hidden; display: inline-block; vertical-align: top;"
                  >
                    <div
                      style="max-width: 948px; display: block;"
                    >
                      <img
                        alt=""
                        aria-hidden="true"
                        role="presentation"
                        src="data:image/svg+xml;charset=utf-8,%3Csvg%20height='720'%20width='948'%20xmlns='http://www.w3.org/2000/svg'%20version='1.1'%3E%3C/svg%3E"
                        style="max-width: 100%; display: block; position: static;"
                      />
                    </div>
                    <div
                      aria-hidden="true"
                      data-placeholder-image=""
                      style="height: 100%; left: 0px; position: absolute; top: 0px; width: 100%;"
                    />
                    <picture>
                      <source
                        data-srcset="//images.ctfassets.net/18fop5x17y3g/6GSQdvd6U3Gzt6Lh7eNaBR/4d364fe9edaf47c271cdcd6034a7ec28/demo-house.png?w=948&h=720&q=50&fm=webp 948w"
                        sizes="(min-width: 948px) 948px, 100vw"
                        type="image/webp"
                      />
                      <img
                        alt="Image alt text"
                        data-gatsby-image-ssr=""
                        data-main-image=""
                        data-src="//images.ctfassets.net/18fop5x17y3g/6GSQdvd6U3Gzt6Lh7eNaBR/4d364fe9edaf47c271cdcd6034a7ec28/demo-house.png?w=948&h=720&q=50&fm=png"
                        data-srcset="//images.ctfassets.net/18fop5x17y3g/6GSQdvd6U3Gzt6Lh7eNaBR/4d364fe9edaf47c271cdcd6034a7ec28/demo-house.png?w=948&h=720&q=50&fm=png 948w"
                        data-testid="tappable-card-media"
                        decoding="async"
                        draggable="false"
                        loading="lazy"
                        sizes="(min-width: 948px) 948px, 100vw"
                        style="height: 100%; left: 0px; position: absolute; top: 0px; transform: translateZ(0); transition: opacity 250ms linear; width: 100%; will-change: opacity; object-fit: cover; object-position: center; opacity: 0;"
                      />
                    </picture>
                    <noscript />
                    <script
                      type="module"
                    >
                      const t="undefined"!=typeof HTMLImageElement&&"loading"in HTMLImageElement.prototype;if(t){const t=document.querySelectorAll("img[data-main-image]");for(let e of t){e.dataset.src&&(e.setAttribute("src",e.dataset.src),e.removeAttribute("data-src")),e.dataset.srcset&&(e.setAttribute("srcset",e.dataset.srcset),e.removeAttribute("data-srcset"));const t=e.parentNode.querySelectorAll("source[data-srcset]");for(let e of t)e.setAttribute("srcset",e.dataset.srcset),e.removeAttribute("data-srcset");e.complete&&(e.style.opacity=1,e.parentNode.parentNode.querySelector("[data-placeholder-image]").style.opacity=0)}}
                    </script>
                  </div>
                  <div
                    class="TappableCard-body css-c6k36h"
                  >
                    <h5
                      class="MuiTypography-root MuiTypography-h5 TappableCard-title TappableCard-noBrandLogo css-87i4k3-MuiTypography-root"
                      data-testid="tappable-card-body-title"
                    >
                      PageInfo Card with Image
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-19yhj5l-MuiSvgIcon-root"
                        data-testid="ArrowForwardIcon"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="m12 4-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z"
                        />
                      </svg>
                    </h5>
                  </div>
                  <span
                    class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                  />
                </a>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`PdpCardsSection renders the video component when a featuredVideo is defined (Promo Data) 1`] = `
<body>
  <div>
    <div
      class="PdpCardsSection Section-root Section-alabaster css-10chrh8"
      data-testid="pdp-cards-section"
    >
      <div
        class=" css-ze8cyt"
      >
        <div
          class="MuiContainer-root MuiContainer-maxWidthXl css-15p7r21-MuiContainer-root"
        >
          <h2
            class="MuiTypography-root MuiTypography-h2 Typography-underline css-1gn4sxn-MuiTypography-root"
            data-testid="typography"
          >
            example-pdp-cards-title
          </h2>
          <div
            class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-row MuiGrid2-spacing-xs-3  css-1qxu916-MuiGrid2-root"
            data-testid="grid-container"
          >
            <div
              class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 MuiGrid2-grid-sm-6 MuiGrid2-grid-md-4 MuiGrid2-grid-lg-4 Grid-item css-j0lfek-MuiGrid2-root"
              data-testid="grid-item"
            >
              <div
                class="ColorPair-white css-mdwtx6"
                data-testid="tappable-card-box"
              >
                <a
                  class="MuiButtonBase-root MuiButton-root Button-root MuiButton-text Button-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-root Button-root MuiButton-text Button-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium TappableCard-cardButton css-82jeic-MuiButtonBase-root-MuiButton-root"
                  data-gtm="{"id":"cta-click1","action":"/en/promo-video/","label":"Promo Card with Video"}"
                  data-testid="tappable-card-main"
                  href="/en/promo-video/"
                  tabindex="0"
                >
                  <div
                    class="YoutubeVideo-inline TappableCard-headerPicture css-frj9jj-Media"
                    data-gtm="{"id":"cta-click--video-youtube","label":"http://localhost:8080/video.mp4-Video label","action":"Play"}"
                    data-testid="tappable-card-media"
                  >
                    <div>
                      <div
                        class="gatsby-image-wrapper gatsby-image-wrapper-constrained YoutubeVideo-previewImage"
                        data-gatsby-image-wrapper=""
                        style="position: relative; overflow: hidden; display: inline-block; vertical-align: top;"
                      >
                        <div
                          style="max-width: 948px; display: block;"
                        >
                          <img
                            alt=""
                            aria-hidden="true"
                            role="presentation"
                            src="data:image/svg+xml;charset=utf-8,%3Csvg%20height='720'%20width='948'%20xmlns='http://www.w3.org/2000/svg'%20version='1.1'%3E%3C/svg%3E"
                            style="max-width: 100%; display: block; position: static;"
                          />
                        </div>
                        <div
                          aria-hidden="true"
                          data-placeholder-image=""
                          style="height: 100%; left: 0px; position: absolute; top: 0px; width: 100%;"
                        />
                        <picture>
                          <source
                            data-srcset="//images.ctfassets.net/18fop5x17y3g/6GSQdvd6U3Gzt6Lh7eNaBR/4d364fe9edaf47c271cdcd6034a7ec28/demo-house.png?w=948&h=720&q=50&fm=webp 948w"
                            sizes="(min-width: 948px) 948px, 100vw"
                            type="image/webp"
                          />
                          <img
                            alt="Image alt text"
                            data-gatsby-image-ssr=""
                            data-main-image=""
                            data-src="//images.ctfassets.net/18fop5x17y3g/6GSQdvd6U3Gzt6Lh7eNaBR/4d364fe9edaf47c271cdcd6034a7ec28/demo-house.png?w=948&h=720&q=50&fm=png"
                            data-srcset="//images.ctfassets.net/18fop5x17y3g/6GSQdvd6U3Gzt6Lh7eNaBR/4d364fe9edaf47c271cdcd6034a7ec28/demo-house.png?w=948&h=720&q=50&fm=png 948w"
                            decoding="async"
                            draggable="false"
                            loading="lazy"
                            sizes="(min-width: 948px) 948px, 100vw"
                            style="height: 100%; left: 0px; position: absolute; top: 0px; transform: translateZ(0); transition: opacity 250ms linear; width: 100%; will-change: opacity; object-fit: cover; object-position: center; opacity: 0;"
                          />
                        </picture>
                        <noscript />
                        <script
                          type="module"
                        >
                          const t="undefined"!=typeof HTMLImageElement&&"loading"in HTMLImageElement.prototype;if(t){const t=document.querySelectorAll("img[data-main-image]");for(let e of t){e.dataset.src&&(e.setAttribute("src",e.dataset.src),e.removeAttribute("data-src")),e.dataset.srcset&&(e.setAttribute("srcset",e.dataset.srcset),e.removeAttribute("data-srcset"));const t=e.parentNode.querySelectorAll("source[data-srcset]");for(let e of t)e.setAttribute("srcset",e.dataset.srcset),e.removeAttribute("data-srcset");e.complete&&(e.style.opacity=1,e.parentNode.parentNode.querySelector("[data-placeholder-image]").style.opacity=0)}}
                        </script>
                      </div>
                      <div
                        class="YoutubeVideo-overlay"
                      >
                        <button
                          aria-label="Video label"
                          class="MuiButtonBase-root MuiIconButton-root IconButton-root iconButton IconButton-medium IconButton-contained MuiIconButton-sizeLarge YoutubeVideo-playButton css-17arkyg-MuiButtonBase-root-MuiIconButton-root"
                          data-testid="icon-button"
                          tabindex="0"
                          type="button"
                        >
                          <svg
                            aria-hidden="true"
                            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
                            data-testid="PlayArrowIcon"
                            focusable="false"
                            viewBox="0 0 24 24"
                          >
                            <path
                              d="M8 5v14l11-7z"
                            />
                          </svg>
                          <span
                            class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                          />
                        </button>
                        <p
                          class="MuiTypography-root MuiTypography-body1 YoutubeVideo-subtitle css-1o02bdp-MuiTypography-root"
                          data-testid="typography"
                        >
                          Video subtitle
                        </p>
                      </div>
                    </div>
                    <div
                      style="opacity: 0; visibility: hidden; transition-delay: 500ms;"
                    >
                      <react-player
                        config="[object Object]"
                        controls="true"
                        data-testid="youtube-inline-react-player"
                        light="true"
                        playing="false"
                        url="http://localhost:8080/video.mp4"
                      />
                    </div>
                  </div>
                  <div
                    class="TappableCard-body css-c6k36h"
                  >
                    <h5
                      class="MuiTypography-root MuiTypography-h5 TappableCard-title TappableCard-noBrandLogo css-87i4k3-MuiTypography-root"
                      data-testid="tappable-card-body-title"
                    >
                      Promo Card with Video
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-19yhj5l-MuiSvgIcon-root"
                        data-testid="ArrowForwardIcon"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="m12 4-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z"
                        />
                      </svg>
                    </h5>
                  </div>
                  <span
                    class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                  />
                </a>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;
